# comicos

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
.claude/: settings.local.json
app/: CMakeLists.txt  main.cpp
app/qml/: CanvasView.qml  LayerPanel.qml  Main.qml  StatusBar.qml  Theme.qml  Toolbar.qml
app/qml/controls/: IconButton.qml  Modal.qml  SegmentedControl.qml
bridge/: CMakeLists.txt
bridge/include/bridge/: AppController.h  DocumentModel.h
bridge/src/: AppController.cpp  DocumentModel.cpp
core/: CMakeLists.txt
core/include/core/: CmcFormat.h  Document.h  History.h  Layer.h  LayerStack.h  Stroke.h  Tile.h  TileManager.h  Types.h
core/src/: CmcFormat.cpp  Document.cpp  History.cpp  Layer.cpp  LayerStack.cpp  Stroke.cpp  Tile.cpp  TileManager.cpp  Types.cpp
engine/: CMakeLists.txt
engine/include/engine/: BrushDab.h  BrushEngine.h  Compositor.h  TileCache.h
engine/src/: BrushDab.cpp  BrushEngine.cpp  Compositor.cpp  TileCache.cpp
render/: CMakeLists.txt
render/include/render/: CanvasItem.h  CanvasRenderer.h  RenderBackend.h  TileRenderer.h
render/src/: CanvasItem.cpp  CanvasRenderer.cpp  RenderBackend.cpp  TileRenderer.cpp
shaders/: CMakeLists.txt  brush.frag  canvas.frag  canvas.vert  composite.frag
src/main/: index.ts  ipc.ts  menu.ts
src/preload/: index.ts
src/renderer/src/: App.tsx
src/renderer/src/components/: Canvas.tsx  CanvasSizeModal.tsx  Toolbar.tsx  icons.tsx
src/renderer/src/styles/: global.css
